--- a/css/other/other-top-aside.css
+++ b/css/other/other-top-aside.css
@@ -45,3 +45,77 @@
   filter: blur(0.5px);
   border-radius: 50%;
 }
+
+/* headerButton */
+.return-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  padding: 0;
+  margin: 0px 15px;
+  border-radius: 50%;
+  box-shadow: rgba(0, 0, 0, 0.3) 0px 0px 0px 2px,
+    rgba(0, 0, 0, 0.8) 0px 4px 6px -1px,
+    rgba(255, 255, 255, 0.08) 0px 1px 0px inset;
+  transition: background-color 0.2s ease-in-out,
+    scale 0.1s cubic-bezier(0.645, 0.045, 0.355, 1);
+  scale: 0.9;
+  translate: 0px 2px;
+}
+.return-button:active {
+  scale: 0.8;
+}
+.return-button:hover {
+  background-color: #ea81af;
+}
+.return-button > * {
+  pointer-events: none;
+}
+.return-button-tip {
+  --tooltip-color: rgb(41, 41, 41);
+  position: absolute;
+  bottom: -65px;
+  background-color: var(--tooltip-color);
+  color: white;
+  border-radius: 5px;
+  font-size: 12px;
+  padding: 8px 12px;
+  font-weight: bold;
+  box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.105);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  opacity: 0;
+  transition: all 0.5s;
+}
+.return-button-tip::before {
+  position: absolute;
+  width: 10px;
+  height: 10px;
+  transform: rotate(45deg);
+  content: "";
+  background-color: var(--tooltip-color);
+  top: -10%;
+}
+.return-button:hover .return-button-tip {
+  opacity: 1;
+}
+.return-button .return-button-icon {
+  position: relative;
+  width: 40px;
+  height: 40px;
+  outline: none;
+  background-color: transparent;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  scale: 0.85;
+  transition: opacity 0.4s cubic-bezier(0.77, 0, 0.175, 1) 80ms,
+    transform 0.5s cubic-bezier(0.455, 0.03, 0.515, 0.955) 80ms;
+}
+.return-button .return-button-icon img {
+  position: absolute;
+  width: 40px;
+  height: 40px;
+}
