--- a/css/content/content-preview.css
+++ b/css/content/content-preview.css
@@ -120,3 +120,64 @@
 }
 
 /*  */
+
+.preview-container {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  padding: 80px;
+  padding-top: 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+}
+.preview-intro {
+  position: relative;
+  box-sizing: border-box;
+  width: 100%;
+  height: 10%;
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  gap: 15px;
+}
+.preview-intro > h1 {
+  margin: 0;
+  text-shadow: rgba(0, 0, 0, 0.5) 0px 0px 20px, rgba(0, 0, 0, 0.5) 0px 0px 50px;
+}
+.preview-intro > .line {
+  height: 120%;
+  width: 3px;
+  background: white;
+  border-radius: 3px;
+}
+.preview-image-container {
+  position: relative;
+  width: 100%;
+  height: 90%;
+}
+.preview-image-container > figure {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.preview-image-container > figure > img {
+  position: absolute;
+  object-fit: contain;
+  max-width: 97%;
+  max-height: 100%;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+.preview-image-back {
+  filter: blur(25px) brightness(0.75);
+  box-shadow: none;
+}
