--- a/css/content/content.css
+++ b/css/content/content.css
@@ -1,6 +1,6 @@
 @import url("content-intro.css");
-@import url("content-gallery.css");
 @import url("content-preview.css");
+@import url("content-light-box.css");
 
 #content {
   position: fixed;
