--- a/css/other/other-top-aside.css
+++ b/css/other/other-top-aside.css
@@ -58,12 +58,12 @@
   box-shadow: rgba(0, 0, 0, 0.3) 0px 0px 0px 2px,
     rgba(0, 0, 0, 0.8) 0px 4px 6px -1px,
     rgba(255, 255, 255, 0.08) 0px 1px 0px inset;
-  transition: background-color 0.2s ease-in-out,
-    scale 0.1s cubic-bezier(0.645, 0.045, 0.355, 1);
+  transition: all 0.25s cubic-bezier(0.215, 0.61, 0.355, 1);
   scale: 0.9;
   translate: 0px 2px;
 }
 .return-button:active {
+  transition: scale 0.1s cubic-bezier(0.645, 0.045, 0.355, 1);
   scale: 0.8;
 }
 .return-button:hover {
@@ -118,4 +118,10 @@
   position: absolute;
   width: 40px;
   height: 40px;
+}
+
+/*  */
+
+.return-button.hide {
+  scale: 0;
 }
