--- a/css/content/content-preview.css
+++ b/css/content/content-preview.css
@@ -4,19 +4,11 @@
   bottom: 0;
   left: 0;
   right: 0;
-  padding: 80px;
-  padding-top: 30px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  gap: 20px;
 }
 .preview-intro {
-  position: relative;
-  box-sizing: border-box;
-  width: 100%;
-  height: 10%;
+  position: absolute;
+  top: 50px;
+  left: 80px;
   display: flex;
   justify-content: flex-start;
   align-items: flex-start;
@@ -24,19 +16,36 @@
   z-index: 1;
 }
 .preview-intro > h1 {
+  font-size: 42px;
   margin: 0;
   text-shadow: rgba(0, 0, 0, 0.5) 0px 0px 20px, rgba(0, 0, 0, 0.5) 0px 0px 50px;
 }
 .preview-intro > .line {
-  height: 120%;
+  height: 80px;
   width: 3px;
   background: white;
   border-radius: 3px;
 }
+.preview-intro .text-mask {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: white;
+}
+
+/*  */
+/*  */
+
 .preview-image-container {
-  position: relative;
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
   width: 100%;
-  height: 90%;
+  height: 100%;
 }
 .preview-image-container > figure {
   position: relative;
@@ -49,13 +58,7 @@
 }
 .preview-image-container > figure > img {
   position: absolute;
-  object-fit: contain;
-  max-width: 97%;
-  max-height: 100%;
-  border-radius: 10px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-}
-.preview-image-back {
-  filter: blur(25px) brightness(0.75);
-  box-shadow: none;
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
 }
