--- a/css/content/content-preview.css
+++ b/css/content/content-preview.css
@@ -17,12 +17,12 @@
   transform-origin: left;
 }
 .preview-intro > h1 {
-  font-size: 42px;
+  font-size: 1.75em;
   margin: 0;
   text-shadow: rgba(0, 0, 0, 0.5) 0px 0px 20px, rgba(0, 0, 0, 0.5) 0px 0px 50px;
 }
 .preview-intro > .line {
-  height: 80px;
+  height: 3.75em;
   width: 3px;
   background: white;
   border-radius: 3px;
