--- a/css/other/other-top-aside.css
+++ b/css/other/other-top-aside.css
@@ -55,9 +55,8 @@
   padding: 0;
   margin: 0px 15px;
   border-radius: 50%;
-  box-shadow: rgba(0, 0, 0, 0.3) 0px 0px 0px 2px,
-    rgba(0, 0, 0, 0.8) 0px 4px 6px -1px,
-    rgba(255, 255, 255, 0.08) 0px 1px 0px inset;
+  background-color: hsl(225, 7.5%, 5%);
+  box-shadow: none;
   transition: all 0.25s cubic-bezier(0.215, 0.61, 0.355, 1);
   scale: 0.9;
   translate: 0px 2px;
@@ -67,6 +66,9 @@
   scale: 0.8;
 }
 .return-button:hover {
+  box-shadow: rgba(0, 0, 0, 0.3) 0px 0px 0px 2px,
+    rgba(0, 0, 0, 0.8) 0px 4px 6px -1px,
+    rgba(255, 255, 255, 0.5) 0px 2px 0px inset;
   background-color: #ea81af;
 }
 .return-button > * {
@@ -74,18 +76,19 @@
 }
 .return-button-tip {
   --tooltip-color: rgb(41, 41, 41);
-  position: absolute;
-  bottom: -65px;
   background-color: var(--tooltip-color);
-  color: white;
-  border-radius: 5px;
-  font-size: 12px;
-  padding: 8px 12px;
-  font-weight: bold;
-  box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.105);
+  position: absolute;
+  bottom: -45px;
   display: flex;
   align-items: center;
   justify-content: center;
+  color: white;
+  font-size: 15px;
+  font-weight: bold;
+  width: max-content;
+  padding: 8px 12px;
+  border-radius: 5px;
+  box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.105);
   opacity: 0;
   transition: all 0.5s;
 }
