--- a/css/content/content-preview.css
+++ b/css/content/content-preview.css
@@ -4,6 +4,7 @@
   bottom: 0;
   left: 0;
   right: 0;
+  z-index: 1;
 }
 .preview-intro {
   position: absolute;
@@ -48,25 +49,6 @@
   width: 100%;
   height: 100%;
 }
-.preview-image-container > figure {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  margin: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.preview-image-container > figure > img {
-  position: absolute;
-  object-fit: cover;
-  width: 100%;
-  height: 100%;
-}
-
-/*  */
-/*  */
-
 .preview-canvas-container {
   position: absolute;
   top: 0;
