--- a/css/popup/popup-add-image.css
+++ b/css/popup/popup-add-image.css
@@ -149,14 +149,14 @@
 }
 .add-image-scroll-icons {
   position: sticky;
-  width: 0;
+  width: 100%;
   height: 0;
-  top: calc(100% - 45px);
-  left: calc(50% - 22.5px);
+  top: calc(100% - 22.5px);
   left: calc(100% - 45px);
   display: flex;
-  flex-direction: column;
-  z-index: 15;
+  justify-content: center;
+  align-items: center;
+  pointer-events: none;
 }
 .scroll-down-icon {
   width: 45px;
