--- a/css/sidebar/sidebar-title.css
+++ b/css/sidebar/sidebar-title.css
@@ -12,6 +12,21 @@
   border-radius: 50%;
 }
 
+#title > #favicon:nth-child(1) {
+  position: absolute;
+  scale: 1;
+  border-radius: 50%;
+  opacity: 0;
+  transition: all 0.375s cubic-bezier(0.455, 0.03, 0.515, 0.955);
+  filter: drop-shadow(3px 3px 1px rgba(0, 0, 0, 0.5))
+    drop-shadow(6px 6px 1px rgba(0, 0, 0, 0.35)) blur(5px) brightness(0.35);
+}
+
+#sidebar:hover #title > #favicon:nth-child(1) {
+  scale: 1.15;
+  opacity: 1;
+}
+
 #title > h1 {
   position: relative;
   display: flex;
